<resources>
    <string name="app_name">Omi</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in short</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email is not registered</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_not_match">This password does not match the email address</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings of activity screen titles/headers -->
    <string name="title_activity_account_info">account_info</string>
    <string name="title_activity_edit_profile">edit_profile</string>
    <string name="title_activity_create_report">create_report</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="title_activity_navigation_main">NavigationMain</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_water_availability_map">Map</string>

    <!-- ID's of buttons -->
    <string name="edit_profile_button">edit_profile</string>

    <!-- TextView texts -->
    <string name="edit_profile_text">Edit Profile</string>

    <!---->

    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="name">Name</string>
    <string name="coordinates">Coordinates</string>
    <string name="address">Address</string>
    <string name="AcctType">Account Type</string>

    <string name="createReport">Create Report</string>
    <string name="cancel">Cancel</string>
    <string name="submitChanges">Submit Changes</string>
    <string name="mainActivityDisplay">This is the main activity for the user</string>
    <string name="update">Update</string>
    <string name="userQuery">What type of user are you?</string>
    <string name="nameQuery">Tell us your name</string>
    <string name="viewReport">View Report</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="find_water">Find Water</string>
    <string name="submitted_reports">Your Reports</string>
    <string name="reporter">Reporter</string>
    <string name="date">Date</string>
    <string name="water_cond">Water Condition</string>
    <string name="water_type">Water Type</string>
    <string name="report_id">Report ID</string>
    <string name="vpm">VPM</string>
    <string name="ppm">PPM</string>
    <string name="go_to_my_reports">Go To My Reports</string>
    <string name="go_to_user_reports">Go To User Reports</string>
    <string name="back">Back</string>
    <string name="loading">Loading\u2026</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_loading">LoadingActivity</string>
</resources>
