<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bkg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a404_notfound.sourceappwater.controllers.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cancel_registration"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:background="@drawable/button_style"
            android:text="@string/cancel"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="405dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="22dp" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancel_registration"
            android:layout_alignStart="@+id/cancel_registration"
            android:layout_marginBottom="19dp"
            android:background="@drawable/button_style"
            android:elevation="0dp"
            android:text="@string/action_sign_up"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="346dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_to_the_terms_and_conditions"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="203dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/reEnterPass"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkBox"
            android:layout_alignStart="@+id/checkBox"
            android:layout_marginBottom="13dp"
            android:fontFamily="sans-serif"
            android:hint="@string/re_enter_password"
            android:password="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="146dp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/reEnterPass"
            android:layout_alignStart="@+id/reEnterPass"
            android:layout_marginBottom="13dp"
            android:fontFamily="sans-serif"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:password="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="96dp" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_marginBottom="14dp"
            android:fontFamily="sans-serif"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </RelativeLayout>

</LinearLayout>
