<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:id="@+id/address"
                android:text="@string/address"
                android:layout_below="@+id/username1"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/coordinates"
                android:text="@string/coordinates"
                android:layout_below="@+id/address"
                android:layout_alignParentStart="true"
                android:layout_marginTop="34dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:id="@+id/username1"
                android:text="@string/name"
                android:layout_below="@+id/accountType"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:id="@+id/accountType"
                android:text="@string/AcctType"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/editinfobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/accountType"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="64dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:text="@string/editInfo"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>

    </FrameLayout>
    <!-- The navigation drawer -->
</RelativeLayout>


