<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- The main content view -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <Button
                android:id="@+id/submitChangesButton"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:background="@drawable/button_1"
                android:text="@string/submitChanges"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                android:layout_alignTop="@+id/textInputLayout3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:background="@drawable/button_1"
                android:text="@android:string/cancel"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/submitChangesButton"
                android:layout_marginBottom="13dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_text"
                android:textColor="@color/steelBlue" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp">

                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="@color/steelBlue" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="140dp">

                <EditText
                    android:id="@+id/addressEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textColor="@color/steelBlue" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="107dp"
                android:id="@+id/textInputLayout3">

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <EditText
                android:id="@+id/coordinateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:hint="@string/coordinates"
                android:textColor="@color/steelBlue" />

        </RelativeLayout>

    <!-- The navigation drawer -->
</android.support.v4.widget.DrawerLayout>
